# AndroidAnimationExercise

./: .gitignore  .travis.yml  README.md  animationkey  build-scan.sh  build.gradle  build.gradle.kts  config.gradle  cpu-art-20190409T145442.trace  gradle.properties  imitation.jks  import-summary.txt  settings.gradle  settings.gradle.bak  settings.gradle.kts  trace_out.txt
.github/: FUNDING.yml
.github/workflows/: android.yml  release_app.yml
animationsSub/: build.gradle
animationsSub/src/main/: AndroidManifest.xml
app/: .gitignore  build.gradle  build.gradle.kts  dokit-config.gradle  proguard-rules.pro
app/libs/: gpupixel-release.aar
app/src/debug/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
buildSrc/: .gitignore  build.gradle  demo.json  gradle_doc.md
buildSrc/script/: calculate_apk_size.kts  parseJson.gradle
cpp_native/: build.gradle
cpp_native/src/main/: AndroidManifest.xml
dataview/: build.gradle
dateview/: build.gradle
dateview/src/main/: AndroidManifest.xml
docs/: cmd.md  views.md  workflow-trggier.md
docs/script/: build-scan.sh  fetch_and_rebase.bat  open_app.md
docs/uml/: AsmClassVisitorFactory.puml
fast-list/: build.gradle
fast-list/src/main/: AndroidManifest.xml
game/: build.gradle
game/src/main/: AndroidManifest.xml
gif-revert/: build.gradle
gif-revert/src/main/: AndroidManifest.xml
gradle/: .gitignore  Test.gradle.kts  android_godeye.gradle  calculate_apk_size.gradle  custom_plugin.gradle  funs.gradle  gradle-daemon-jvm.properties  infos.json  libs.versions.toml  report_apk_size_after_package.gradle  test.gradle
gradle/wrapper/: gradle-wrapper.properties
imitate/: .gitignore  build.gradle  build.gradle.kts  hyperion-config.gradle
imitate/libs/: matisse-release.aar
phenix/: build.gradle
plugin/: build.gradle
plugin/script/: parseJson.gradle
script/: adb_help.txt  clean_app_prebuild.sh  i_screen_record.sh  launch_total_time.sh  mac_fetch_and_rebase.sh  open_app.md
skeleton/: .gitignore  build.gradle
subs/: build.gradle.kts
subs/ai/: build.gradle  build.gradle.kts  download_model.gradle
subs/compose/: build.gradle  build.gradle.kts
subs/cpp_native/: build.gradle  build.gradle.kts
subs/cpp_native/src/main/cpp/: CMakeLists.txt  cpp_native.cpp
subs/cpp_native/src/main/cpp/bzip/: bspatch.h
subs/cpp_native/src/main/cpp/p/: CMakeLists.txt
subs/dataview/: build.gradle  build.gradle.kts
subs/game/: build.gradle  build.gradle.kts
subs/gif-revert/: build.gradle  build.gradle.kts
subs/skeleton/: build.gradle  build.gradle.kts
uml/: lll.puml
(+1739 files in other folders)
